# iraklis7_linrg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: publish-app.yml  test-app.yml
data/processed/: listings_data_features.csv  listings_data_labels.csv  listings_data_norm.csv  listings_data_predictions.csv
data/raw/: listings_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
iraklis7_linrg/: __init__.py  config.py  dataset.py  features.py  plots.py
iraklis7_linrg/modeling/: predict.py  train.py
models/: listings_data_model.joblib
notebooks/: 0-data-exploration copy.ipynb  0c-pca2.ipynb  1-data-cleaning-and-features.ipynb  2-visualizations.ipynb  3-modelling.ipynb
tests/: test_data.py
